--- a/mousse.html
+++ b/mousse.html
@@ -135,7 +135,7 @@
                     <h4 class="card-title">POLILATEX® GAMME STANDARD</h4>
                     <p>Les mousses microcellulaires à cellules ouvertes de type conventionnel offrent une large gamme de densités, allant de 18 à 40 kg/m³. Ces mousses, fabriquées à partir de polyuréthanes de base, assurent un confort optimal et une résistance remarquable à la déformation sur le long terme.</p>
                     <br>
-                    <button type="button" class="btn" style="background-color: #17283b; color: white;">Données techniques</button>
+                    <button type="button" onclick="window.open('assets/Files/POLILATEX® GAMME STANDARD.pdf', '_blank')" class="btn" style="background-color: #17283b; color: white;">Données techniques</button>
                   </div>
                   </div>
                 <div class="col-xl-5">
@@ -157,7 +157,7 @@
                     <h4 class="card-title">POLILATEX® GAMME SPÉCIALE</h4>
                   <p>Les mousses microcellulaires à cellules ouvertes de type conventionnel, de haute technologie, sont constituées de polyuréthanes aux propriétés adaptées à des applications techniques variées. Elles sont utilisées dans des secteurs tels que l'insonorisation, l'emballage, le bâtiment et la chaussure, tout en étant également employées pour des usages spécifiques dans le mobilier et la literie.</p>
                   <br>
-                  <button type="button" class="btn" style="background-color: #17283b; color: white;">Données techniques</button>  
+                  <button type="button"  onclick="window.open('assets/Files/POLILATEX® GAMME SPÉCIALE.pdf', '_blank')" class="btn" style="background-color: #17283b; color: white;">Données techniques</button>  
                 </div>
                 </div>
               </div>
@@ -173,7 +173,7 @@
                     <h4 class="card-title">POLILATEX® COMBUSTION RETARD</h4>
 <p>Les mousses microcellulaires à cellules ouvertes de type conventionnel sont spécialement conçues pour répondre aux normes internationales exigeant une haute résistance à la flamme, ainsi qu'un faible niveau d'opacité et de toxicité des fumées. Ces mousses sont développées pour des applications dans des environnements publics tels que les hôpitaux, les prisons et les hôtels, où les exigences de sécurité sont particulièrement strictes.</p>
 <br>
-<button type="button" class="btn" style="background-color: #17283b; color: white;">Données techniques</button>  </div>
+<button type="button" class="btn"  onclick="window.open('assets/Files/POLILATEX® COMBUSTION RETARD et H.R..pdf', '_blank')" style="background-color: #17283b; color: white;">Données techniques</button>  </div>
                 </div>
                 <div class="col-xl-5">
                   <div class="card-bg"><img src="assets/img/FireResistant.jpg" alt=""></div>
@@ -193,7 +193,7 @@
                     <h4 class="card-title">OLMOSOFF®</h4>
 <p>Les mousses microcellulaires à cellules ouvertes de type conventionnel, dotées d'une technologie de pointe, représentent une innovation majeure. Elles se distinguent par un excellent indice d'élasticité, un confort optimal, une faible déformation, une résistance élevée à la déchirure et à la traction, ainsi qu'une remarquable respirabilité. Disponibles dans une gamme de densités allant de 12 à 45 kg/m³, ces mousses présentent généralement des propriétés de basse portance. Elles sont adaptées à une utilisation dans les secteurs du mobilier et de la literie.</p>                
 <br>
-<button type="button" class="btn" style="background-color: #17283b; color: white;">Données techniques</button>
+<button type="button"  onclick="window.open('assets/Files/OLMOSOFF.pdf', '_blank')" class="btn" style="background-color: #17283b; color: white;">Données techniques</button>
 </div>
         </div>
               </div></div>
@@ -209,7 +209,7 @@
                       <h4 class="card-title">GAMME HAUT CONFORT</h4>
                       <p>Les mousses microcellulaires à cellules ouvertes de type conventionnel se caractérisent par des performances exceptionnelles en termes d'élasticité et d'indéformabilité, tout en répondant à des exigences élevées de confort. Ces propriétés permettent à ces polyuréthanes de satisfaire les besoins les plus exigeants dans les secteurs de l'ameublement et de la literie.</p>  
                       <br>
-                      <button type="button" class="btn" style="background-color: #17283b; color: white;">Données techniques</button>  </div>
+                      <button type="button"  onclick="window.open('assets/Files/GAMME HAUT CONFORT.pdf', '_blank')" class="btn" style="background-color: #17283b; color: white;">Données techniques</button>  </div>
                   </div>
                   <div class="col-xl-5">
                     <div class="card-bg"><img src="assets/img/HighComfort.jpg" alt=""></div>
@@ -229,7 +229,7 @@
                       <h4 class="card-title">H.R. / HIGH RESILIENS</h4>
 <p>Les mousses microcellulaires à cellules ouvertes de type H.R. (High Resilience) constituent une alternative aux mousses conventionnelles classiques. Elles se démarquent par des performances supérieures en termes d'indice d'élasticité et de respirabilité, ce qui améliore significativement le niveau de confort. De plus, elles se distinguent par leur excellente résistance à la flamme, leur permettant de répondre aux normes internationales les plus répandues en matière de sécurité incendie.</p>
 <br>
-<button type="button" class="btn" style="background-color: #17283b; color: white;">Données techniques</button> </div>
+<button type="button" class="btn"  onclick="window.open('assets/Files/POLILATEX® COMBUSTION RETARD et H.R..pdf', '_blank')" style="background-color: #17283b; color: white;">Données techniques</button> </div>
                   </div>
                 </div></div>
               </div>
@@ -244,7 +244,7 @@
                         <h4 class="card-title">GAMME B.S.</h4>
 <p>Les mousses microcellulaires à cellules ouvertes de type conventionnel et H.R. (High Resilience) forment une gamme complète spécialement conçue pour réussir des tests de résistance à la flamme très rigoureux, tels que le B.S. 5852 CRIB V. Cette gamme comprend la famille Polilatex (gamme C.M.) et la gamme Elast Performance FR. Grâce à la grande variété de mousses proposées, elle offre des solutions adaptées à tous les besoins du secteur du meuble rembourré, notamment lorsque des exigences spécifiques en matière de résistance au feu sont requises.</p>                      
 <br>
-<button type="button" class="btn" style="background-color: #17283b; color: white;">Données techniques</button></div>
+<button type="button" class="btn" onclick="window.open('assets/Files/GAMME B.S..pdf', '_blank')" style="background-color: #17283b; color: white;">Données techniques</button></div>
                     </div>
                     <div class="col-xl-5">
                       <div class="card-bg"><img src="assets/img/Serie-BS.jpg" alt=""></div>
@@ -265,7 +265,7 @@
                           <h4 class="card-title">GAMME HAUTE TECHNOLOGIE</h4>
 <p>Les mousses microcellulaires à cellules ouvertes de type H.R. (High Resilience) incarnent l'excellence de la gamme OLMO. Conçues pour offrir un niveau de confort optimal tout en minimisant l'impact environnemental, elles se composent des familles Ecoelast, Polilatex HT et Lympha. Cette dernière famille se distingue par l'utilisation de matières premières d'origine végétale, positionnant ces mousses à l'avant-garde de la technologie du polyuréthane expansé. Elles représentent ainsi une solution innovante et respectueuse de l'environnement.</p>                        
 <br>
-<button type="button" class="btn" style="background-color: #17283b; color: white;">Données techniques</button>
+<button type="button" class="btn" onclick="window.open('assets/Files/GAMME HAUTE TECHNOLOGIE.pdf', '_blank')" style="background-color: #17283b; color: white;">Données techniques</button>
 </div>
   </div>
                     </div>
@@ -280,7 +280,7 @@
                           <h4 class="card-title">GAMME VISCOÉLASTIQUE</h4>
                         <p>Les mousses microcellulaires à cellules ouvertes de type conventionnel et H.R. (High Resilience) sont des mousses à retour lent et à très faible indice d'élasticité, capables de s'adapter parfaitement à la forme du corps pour un accueil optimal. Elles évitent ainsi la pression excessive souvent associée aux mousses traditionnelles. Ces caractéristiques en font un choix particulièrement apprécié dans le secteur de la literie, où le confort et le soutien sont essentiels.</p>
                         <br>
-                        <button type="button" class="btn" style="background-color: #17283b; color: white;">Données techniques</button>  </div>
+                        <button type="button" class="btn" onclick="window.open('assets/Files/GAMME VISCOÉLASTIQUE.pdf', '_blank')" style="background-color: #17283b; color: white;">Données techniques</button>  </div>
                       </div>
                       <div class="col-xl-5">
                         <div class="card-bg"><img src="assets/img/Viscoelastico.jpg" alt=""></div>
@@ -300,7 +300,7 @@
                             <h4 class="card-title">ROULEAUX DE FEUILLE CONTINUE</h4>
                             <p>La production en continu permet de fabriquer des blocs de polyuréthane de longueurs variées. Les blocs de 60 mètres de long, appelés "pans longs", sont principalement utilisés pour la production de rouleaux de mousse (feuilles continues). Selon les types et les densités de mousse, il est possible d'obtenir des rouleaux dont l'épaisseur peut aller de légèrement plus d'un millimètre jusqu'à environ dix centimètres. Les tolérances d'épaisseur sont contrôlées avec une précision au dixième de millimètre, garantissant une grande régularité et qualité des produits finis.</p>
                             <br>
-                            <button type="button" class="btn" style="background-color: #17283b; color: white;">Données techniques</button>  
+                            <button type="button" class="btn" onclick="window.open('assets/Files/ROULEAUX DE FEUILLE CONTINUE.pdf', '_blank')" style="background-color: #17283b; color: white;">Données techniques</button>  
                           </div>
                         </div>
                       </div>
@@ -319,7 +319,7 @@
             <div class="icon flex-shrink-0">
               <i class="bi bi-people" style="color: #ffffff;"></i>
             </div>
-            <h2 class="counter" data-count="100">0</h2>
+            <h2 class="counter" data-count="300">+0</h2>
             <p>Clients</p>
           </div>
           <div class="stat">
@@ -333,7 +333,7 @@
             <div class="icon flex-shrink-0">
               <i class="bi bi-box" style="color: #ffffff;"></i>
             </div>
-            <h2 class="counter" data-count="100">0</h2>
+            <h2 class="counter" data-count="200">0</h2>
             <p>Types de produits</p>
           </div>
         </div>
