--- a/produittoscanagomma.html
+++ b/produittoscanagomma.html
@@ -139,7 +139,7 @@
                                 </p>
                                 <br>
                                 <div class="text-end">
-                                    <button type="button" class="btn" style="background-color: #17283b; color: white;">Données techniques</button>
+                                    <button type="button" class="btn" onclick="window.open('assets/Files/MOUSSES STANDARD.pdf', '_blank')" style="background-color: #17283b; color: white;">Données techniques</button>
                                 </div>
                             </div>
                         </div>
@@ -160,7 +160,7 @@
                               </p>
                               <br>
                               <div class="text-end">
-                                  <button type="button" class="btn" style="background-color: #17283b; color: white;">Données techniques</button>
+                                  <button type="button" class="btn" onclick="window.open('assets/Files/MOUSSES SELON LES NORMES FIAT.pdf', '_blank')" style="background-color: #17283b; color: white;">Données techniques</button>
                               </div>
                           </div>
                       </div>
@@ -187,7 +187,7 @@
                             </p>
                             <br>
                             <div class="text-end">
-                                <button type="button" class="btn" style="background-color: #17283b; color: white;">Données techniques</button>
+                                <button type="button" class="btn" onclick="window.open('assets/Files/MOUSSES À FAIBLE FOGGING ET FAIBLES ÉMISSIONS POUR LAUTOMOBILE.pdf', '_blank')" style="background-color: #17283b; color: white;">Données techniques</button>
                             </div>
                         </div>
                     </div>
@@ -208,7 +208,7 @@
                           </p>
                           <br>
                           <div class="text-end">
-                              <button type="button" class="btn" style="background-color: #17283b; color: white;">Données techniques</button>
+                              <button type="button" class="btn" onclick="window.open('assets/Files/MOUSSES À CELLULES FERMÉES.pdf', '_blank')" style="background-color: #17283b; color: white;">Données techniques</button>
                           </div>
                       </div>
                   </div>
@@ -229,7 +229,7 @@
                         </p>
                         <br>
                         <div class="text-end">
-                            <button type="button" class="btn" style="background-color: #17283b; color: white;">Données techniques</button>
+                            <button type="button" class="btn" onclick="window.open('assets/Files/MOUSSES SPÉCIALES.pdf', '_blank')" style="background-color: #17283b; color: white;">Données techniques</button>
                         </div>
                     </div>
                 </div>
@@ -250,7 +250,7 @@
                       </p>
                       <br>
                       <div class="text-end">
-                          <button type="button" class="btn" style="background-color: #17283b; color: white;">Données techniques</button>
+                          <button type="button" class="btn" onclick="window.open('assets/Files/MOUSSES IGNIFUGES.pdf', '_blank')" style="background-color: #17283b; color: white;">Données techniques</button>
                       </div>
                   </div>
               </div>
@@ -271,7 +271,7 @@
                       </p>
                       <br>
               <div class="text-end">
-                <button type="button" class="btn" style="background-color: #17283b; color: white;">Données techniques</button>
+                <button type="button" class="btn"  onclick="window.open('assets/Files/MOUSSES VISCOÉLASTIQUES ET AMORTISSEURS DE CHOC.pdf', '_blank')" style="background-color: #17283b; color: white;">Données techniques</button>
               </div>
             </div>
         </div>
@@ -291,7 +291,7 @@
                       </p>
                       <br>
                       <div class="text-end">
-                        <button type="button" class="btn" style="background-color: #17283b; color: white;">Données techniques</button>
+                        <button type="button" class="btn"  onclick="window.open('assets/Files/MOUSSES POUR EPONGES, SOINS DOMESTIQUES ET DU CORPS.pdf', '_blank')" style="background-color: #17283b; color: white;">Données techniques</button>
                       </div>
                     </div>
                 </div>
@@ -313,7 +313,7 @@
             <div class="icon flex-shrink-0">
               <i class="bi bi-people" style="color: #ffffff;"></i>
             </div>
-            <h2 class="counter" data-count="100">0</h2>
+            <h2 class="counter" data-count="300">0</h2>
             <p>Clients</p>
           </div>
           <div class="stat">
@@ -327,7 +327,7 @@
             <div class="icon flex-shrink-0">
               <i class="bi bi-box" style="color: #ffffff;"></i>
             </div>
-            <h2 class="counter" data-count="100">0</h2>
+            <h2 class="counter" data-count="200">0</h2>
             <p>Types de produits</p>
           </div>
         </div>
@@ -345,8 +345,9 @@
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-about">
             <a href="index.html" class="logo d-flex align-items-center">
-              <img src="assets/img/Logo-footer.jpg" alt="">
-            </a>
+              <a href="index.html" class="logo d-flex align-items-center">
+                <img src="assets/img/Logo-footer.jpg" alt="">
+        </a>            </a>
             <p>Linea Confort est une société à responsabilité limitée (SARL) crée par Monsieur Hédi Bouaziz.</p>  
             <div class="social-links d-flex mt-4">
               <a href="https://www.facebook.com/LineaConfortTN"  onclick="window.open(this.href); return false;"><i class="bi bi-facebook"></i></a>
@@ -356,34 +357,34 @@
           </div>
 
           <div class="col-lg-2 col-6 footer-links">
-            <h2>Liens Utiles</h2>
+            <h4>Liens Utiles</h4>
             <ul>
-              <li><a href="#">Accueil</a></li>
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Terms of service</a></li>
-              <li><a href="#">Privacy policy</a></li>
+              <li><a href="index.html">Accueil<br></a></li>          
+              <li><a href="services.html">Services</a></li>
+              <li><a href="certifications.html">Certifications</a></li>
+              <li><a href="contact.html">Contact</a></li>
+
             </ul>
           </div>
 
           <div class="col-lg-2 col-6 footer-links">
-            <h2>Our Services</h2>
+            <h4>Nos Services</h4>
             <ul>
-              <li><a href="#">Web Design</a></li>
-              <li><a href="#">Web Development</a></li>
-              <li><a href="#">Product Management</a></li>
-              <li><a href="#">Marketing</a></li>
-              <li><a href="#">Graphic Design</a></li>
+              <li><a href="services.html#bloc">Polyuréthane en bloc</a></li>
+              <li><a href="services.html#plaque">Polyuréthane en plaque</a></li>
+              <li><a href="services.html#rouleaux">Rouleaux de feuille continue</a></li>
+              <li><a href="services.html#canape">Fabrication de canapés en cuir et tissu</a></li>
+              <li><a href="services.html#oreillers">Oreillers</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
-            <h2>Contactez-nous</h2>
+            <h4>Contactez-nous</h4>
             <p>Route Teniour - BP N°72</p>
             <p>PTT Chihia - 3041 Sfax</p>
             <p>Tunisie</p>
             <p class="mt-4">
-              <strong>Phone:</strong> 
+              <strong>Numéro:</strong> 
               <span>+216 24 970 015</span> | 
               <span>+216 29 488 365</span>
             </p>             
