--- a/viscoperformance.html
+++ b/viscoperformance.html
@@ -125,7 +125,7 @@
              <!-- Section Titre + Bouton -->
              <div class="d-flex justify-content-between align-items-center">
               <h2 class="title">VISCO PERFORMANCE</h2>
-              <button type="button" class="btn" style="background-color: #17283b; color: white;">Données techniques</button>
+              <button type="button" class="btn" onclick="window.open('assets/Files/ViscoPerformance.pdf', '_blank')" style="background-color: #17283b; color: white;">Données techniques</button>
             </div>
                 <!-- Contenu du texte -->
                 <div class="content">
@@ -161,7 +161,7 @@
               <div class="icon flex-shrink-0">
                 <i class="bi bi-people" style="color: #ffffff;"></i>
               </div>
-              <h2 class="counter" data-count="100">0</h2>
+              <h2 class="counter" data-count="300">0</h2>
               <p>Clients</p>
             </div>
             <div class="stat">
@@ -175,7 +175,7 @@
               <div class="icon flex-shrink-0">
                 <i class="bi bi-box" style="color: #ffffff;"></i>
               </div>
-              <h2 class="counter" data-count="100">0</h2>
+              <h2 class="counter" data-count="200">0</h2>
               <p>Types de produits</p>
             </div>
           </div>
