--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html">Accueil<br></a></li>
-          <li class="dropdown"><a href="#" class="active"><span>Produits Olmo Giuseppe</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="#" ><span>Produits Olmo Giuseppe</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="mousse.html">Mousse</a></li>
               <li class="dropdown"><a href="#"><span>ELASTIC FOAM | BEDDING</span><i class="bi bi-chevron-down toggle-dropdown"></i></a>
